Adjusted README copyright

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 BREAD - javascript Bible READer
 
-(c)Copyright 2012 Upward Momentum Ministries. Do not use or reproduce any portion of code for any purpose without written permission.
+All code (c)Copyright 2012 Upward Momentum Ministries.
