--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 BREAD - javascript Bible READer
 
-All code (c)Copyright 2012 Upward Momentum Ministries.
+Copyright 2013 Preston Badeer, All Rights Reserved
